deployment/mongo-deployment.yaml
# Create MongoDB deployment
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb
  namespace: gic-asenhoradosaneis
spec:
  serviceName: "mongodb"
  replicas: 3
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongodb
        image: registry.deti/gic-asenhoradosaneis/mongodb
        command:
        - mongod
        - "--config"
        - "/config/mongod.conf"
        volumeMounts:
        - name: mongodb-config
          mountPath: /config
        - name: mongodb-data
          mountPath: /data/db
        ports:
        - name: mongodb
          containerPort: 27017
      restartPolicy: Always
      volumes:
      - name: mongodb-config
        configMap:
          name: mongodb-config
  volumeClaimTemplates:
  - metadata:
      name: mongodb-data
    spec:
      accessModes:
        - ReadWriteOnce
      storageClassName: longhorn
      resources:
        requests:
          storage: 1Gi

# Create Job for Mongo Master
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: gic-asenhoradosaneis
  labels:
    app: mongodb
spec:
  selector:
    app: mongodb
  ports:
    - port: 27017
      targetPort: 27017

# Config Map
