deployment/rsyslog-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rsyslog
  namespace: gic-asenhoradosaneis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rsyslog
  template:
    metadata:
      labels:
        app: rsyslog
    spec:
      containers:
      - name: rsyslog
        image: registry.deti/gic-asenhoradosaneis/rsyslog:v1
        ports:
          - containerPort: 514
            protocol: UDP
          - containerPort: 514
            protocol: TCP
        volumeMounts:
            - name: config-volume
              mountPath: /etc/rsyslog.conf
              subPath: rsyslog.conf
      volumes:
        - name: config-volume
          configMap:
            name: rsyslog-config

---
apiVersion: v1
kind: Service
metadata:
  name: rsyslog
  namespace: gic-asenhoradosaneis
spec:
  selector:
    app: rsyslog
  ports:
  - name: udp
    protocol: UDP
    port: 514
    targetPort: 514
  - name: tcp
    protocol: TCP
    port: 514
    targetPort: 514
