deployment/wordpress-deployment.yaml



# WordPress Deployment
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  namespace: gic-asenhoradosaneis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress
  strategy: {}
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      containers:
        - image: registry.deti/gic-asenhoradosaneis/wordpress:v1
          name: wordpress
          ports:
            - containerPort: 4058
          # env:
          #   - name: WORDPRESS_DB_HOST
          #     value: wordpress-mysql
          #   - name: WORDPRESS_DB_PASSWORD
          #     valueFrom:
          #       secretKeyRef:
          #         name: mysql-secret
          #         key: password
          #   - name: WORDPRESS_DB_USER
          #     value: wordpress
          resources: {}
          volumeMounts:
            - name: wordpress-static
              mountPath: /var/www/html
      restartPolicy: Always
      volumes:
        - name: wordpress-static
          persistentVolumeClaim:
            claimName: wordpress-static-pvc


# WordPress Service
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  namespace: gic-asenhoradosaneis
spec:
  ports:
    - port: 4000
      targetPort: 4058
  selector:
    app: wordpress






# ---
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: wordpress-mysql
#   namespace: gic-asenhoradosaneis
#   labels:
#     app: wordpress
# spec:
#   selector:
#     matchLabels:
#       app: wordpress
#       tier: mysql
#   strategy:
#     type: Recreate
#   template:
#     metadata:
#       labels:
#         app: wordpress
#         tier: mysql
#     spec:
#       containers:
#       - image: mysql:8.0
#         name: mysql
#         env:
#         - name: MYSQL_ROOT_PASSWORD
#           valueFrom:
#             secretKeyRef:
#               name: mysql-pass
#               key: password
#         - name: MYSQL_DATABASE
#           value: wordpress
#         - name: MYSQL_USER
#           value: wordpress
#         - name: MYSQL_PASSWORD
#           valueFrom:
#             secretKeyRef:
#               name: mysql-pass
#               key: password
#         ports:
#         - containerPort: 3306
#           name: mysql
#         volumeMounts:
#         - name: mysql-persistent-storage
#           mountPath: /var/lib/mysql
#       volumes:
#       - name: mysql-persistent-storage
#         persistentVolumeClaim:
#           claimName: mysql-pv-claim



# ---


# # Create MySQL Service for wordpress
# apiVersion: v1
# kind: Service
# metadata:
#   name: wordpress-mysql
#   namespace: gic-asenhoradosaneis
#   labels:
#     app: wordpress
# spec:
#   ports:
#     - port: 3306
#   selector:
#     app: wordpress
#     tier: mysql
#   clusterIP: None
