deployment/webclients-deployment.yaml
# # Create Management WebClient deployment
# ---
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: management-webclient
#   namespace: gic-asenhoradosaneis
# spec:
#   replicas: 3
#   selector:
#     matchLabels:
#       app: management-webclient
#   template:
#     metadata:
#       labels:
#         app: management-webclient
#     spec:
#       containers:
#       - name: management-webclient
#         image: registry.deti/gic-asenhoradosaneis/management-webclient
#         resources:
#           requests:
#             cpu: "100m"
#             memory: "200Mi"
#           limits:
#             cpu: "300m"
#             memory: "500Mi"
#         imagePullPolicy: Always
#         ports:
#           - containerPort: 8080
#       restartPolicy: Always
#       affinity:
#         podAffinity:
#           requiredDuringSchedulingIgnoredDuringExecution:
#           - topologyKey: kubernetes.io/hostname
#             labelSelector:
#               matchLabels:
#                 app: management-server

# Create Shopping WebClient deployment
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shopping-webclient
  namespace: gic-asenhoradosaneis
spec:
  replicas: 3
  selector:
    matchLabels:
      app: shopping-webclient
  template:
    metadata:
      labels:
        app: shopping-webclient
    spec:
      containers:
      - name: shopping-webclient
        image: registry.deti/gic-asenhoradosaneis/shopping-webclient
        resources:
          requests:
            cpu: "100m"
            memory: "200Mi"
          limits:
            cpu: "300m"
            memory: "500Mi"
        imagePullPolicy: Always
        ports:
          - containerPort: 8080
      restartPolicy: Always
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - topologyKey: kubernetes.io/hostname
            labelSelector:
              matchLabels:
                app: shopping-server

# # Create Service for Management WebClient
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: management-webclient
#   namespace: gic-asenhoradosaneis
# spec:
#   ports:
#   - port: 80                    
#     targetPort: 8080
#   selector:
#     app: management-webclient

# Create Service for Shopping WebClient
---
apiVersion: v1
kind: Service
metadata:
  name: shopping-webclient
  namespace: gic-asenhoradosaneis
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: shopping-webclient

# Configure Traefik
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gic-asenhoradosaneis-k3s
  namespace: gic-asenhoradosaneis
  annotations:
    spec.ingressClassName: traefik
    traefik.ingress.kubernetes.io/frontend-entry-points: http,https
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
    traefik.ingress.kubernetes.io/preserve-host: "true"
spec:
  rules:
  - host: gic-asenhoradosaneis.k3s
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx
            port: 
              number: 80

# # Create Horizontal Pod Autoscaler for Management
# ---
# apiVersion: autoscaling/v1
# kind: HorizontalPodAutoscaler
# metadata:
#   name: management-webclient-hpa
# spec:
#   scaleTargetRef:
#     apiVersion: apps/v1
#     kind: Deployment
#     name: management-webclient
#   minReplicas: 3
#   maxReplicas: 5
#   targetCPUUtilizationPercentage: 75

# Create Horizontal Pod Autoscaler for Shopping
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: gic-asenhoradosaneis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  strategy: {}
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - image: registry.deti/gic-asenhoradosaneis/nginx
          name: nginx
          ports:
            - containerPort: 80
          resources: {}
          
# Create Service for Nginx
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: gic-asenhoradosaneis
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: nginx
